--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.0.2",
     "@mui/material": "^6.1.6",
     "@mui/material-nextjs": "^6.1.6",
-    "@emotion/cache": "^11.13.1"
+    "@emotion/cache": "^11.13.1",
+    "@emotion/styled": "^11.13.0"
   },
   "devDependencies": {
     "typescript": "^5",
