--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "next": "15.0.2",
     "@mui/material": "^6.1.6",
     "@mui/material-nextjs": "^6.1.6",
-    "@emotion/cache": "^11.13.1",
-    "@emotion/styled": "^11.13.0"
+    "@emotion/cache": "^11.13.1"
   },
   "devDependencies": {
     "typescript": "^5",
