--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "@emotion/react",
+    "jsx": "reserve",
     "incremental": true,
     "plugins": [
       {
