--- a/package.json
+++ b/package.json
@@ -14,11 +14,7 @@
     "next": "15.0.2",
     "@mui/material": "^6.1.6",
     "@mui/material-nextjs": "^6.1.6",
-    "@emotion/cache": "^11.13.1",
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
-  },
-  "resolutions": {
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
+    "@emotion/cache": "^11.13.1"
   },
   "devDependencies": {
     "typescript": "^5",
