--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^6.1.6",
     "@mui/material-nextjs": "^6.1.6",
     "@emotion/cache": "^11.13.1",
-    "@emotion/styled": "^11.13.0"
+    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.13.0"
   },
   "devDependencies": {
     "typescript": "^5",
