--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "nextjs-playground",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,23 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "next": "15.0.2",
-    "@mui/material": "^6.1.6",
-    "@mui/material-nextjs": "^6.1.6",
-    "@emotion/cache": "^11.13.1",
+    "@emotion/cache": "^11.13.0",
+    "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@emotion/react": "^11.13.0"
+    "@mui/material": "^6.1.0",
+    "@mui/material-nextjs": "^6.1.0",
+    "next": "15.0.2",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "eslint-config-next": "14.1.3",
+    "typescript": "^5"
   }
 }
