--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material-nextjs": "^6.1.0",
     "next": "15.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
