--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "katex": "^0.16.11"
   },
   "devDependencies": {
     "@types/node": "^20",
