--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/katex": "^0.16.0",
     "eslint": "^8",
     "eslint-config-next": "^15.0.0",
     "typescript": "^5"
