--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
-  "name": "nextjs-playground",
-  "version": "0.1.0",
+  "name": "mathnodbew",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn api.index:app --reload",
+    "next-dev": "next dev",
+    "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
+   "dependencies": {
+    "autoprefixer": "^10.4.0",
+    "concurrently": "^9.0.1",
+    "@emotion/cache": "^11.13.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.0",
+    "@mui/material-nextjs": "^6.1.0",
     "next": "15.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.0"
+    "postcss": "^8.4.47",
     "katex": "^0.16.11"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/katex": "^0.16.0",
+    "@types/react-katex": "^3",
     "eslint": "^8",
     "eslint-config-next": "^15.0.0",
     "typescript": "^5"
