--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "next": "15.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
     "postcss": "^8.4.47",
     "katex": "^0.16.11"
   },
